<resources>
    <string name="app_name">AppTuendo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_addPrenda">Añadir Prenda</string>
    <string name="drawer_newOufit">Atuendo</string>
    <string name="drawer_app_name">AppTuendo</string>
    <string name="drawer_app_welcome">¿Qué vestirás hoy?</string>
    <string name="main1_app_name">AppTuendo!!!</string>
    <string name="main2_new_button">nueva imagen</string>
    <string name="main2_color_button">Color</string>
    <string name="main2_guardar_button">guardar prenda</string>
    <string name="main2_prenda_text">prenda</string>
    <string name="main2_material_text">material</string>
    <string name="main2_ocasion_text">ocasion</string>
    <string name="main2_atributos_text">atributos</string>
    <string name="main3_ciudad_text">Ciudad</string>
    <string name="main3_temperatura_text">Temperatura</string>
    <string name="main3_generar_button">generar</string>

    <string-array name="main2_prenda">
        <item> Elegir </item>
        <item>Bufanda</item>
        <item>Blusa</item>
        <item>Blusa con escote</item>
        <item>Camisa</item>
        <item>Polera</item>
        <item>Chompa</item>
        <item>Pantalón</item>
        <item>Jeans</item>
        <item>Falda</item>
        <item>Mini Falda</item>
        <item>Vestido</item>
        <item>Vestido con escote</item>
    </string-array>
    <string-array name="main2_material">
        <item> Elegir </item>
        <item>Seda</item>
        <item>Lana</item>
        <item>Algodon</item>
        <item>Poliester</item>
        <item>Jean</item>
        <item>Mezclilla</item>
    </string-array>
    <string-array name="main2_ocasion">
        <item> Elegir </item>
        <item>Trabajo</item>
        <item>Fiesta</item>
        <item>Deporte</item>
        <item>Casa</item>
        <item>Paseo</item>
    </string-array>
    <string name="open_weather_maps_app_id">d9edbd85570966665732e98cc60c47b4</string>

    <string name="action_settings">:P</string>
</resources>
