<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.apptuendo.Main2Activity"
    >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="2"
        android:background="@android:color/background_light">

        <ImageView
            android:id="@+id/prenda_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="open"
            android:scaleType="fitCenter"
            android:src="@drawable/names"
            />

    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:layout_weight="3"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:gravity="center"
            android:text="@string/main2_atributos_text"
            android:textAllCaps="true"
            android:textSize="24sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TableLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@android:color/background_light"
                >
                <TableRow>
                    <TextView
                        android:layout_width="96dp"
                        android:layout_height="36dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="8dp"
                        android:text="@string/main2_prenda_text"
                        android:textAllCaps="true"/>
                    <Spinner
                        android:id="@+id/prenda_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="36dp"
                        android:gravity="center_vertical"
                        android:textAllCaps="true"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_width="96dp"
                        android:layout_height="36dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="8dp"
                        android:text="@string/main2_material_text"
                        android:textAllCaps="true"/>
                    <Spinner
                        android:id="@+id/material_spinner"
                        android:layout_width="120dp"
                        android:layout_height="36dp"
                        android:gravity="center_vertical"
                        android:textAllCaps="true"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_width="96dp"
                        android:layout_height="36dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="8dp"
                        android:text="@string/main2_ocasion_text"
                        android:textAllCaps="true"/>
                    <Spinner
                        android:id="@+id/ocasion_spinner"
                        android:layout_width="120dp"
                        android:layout_height="36dp"
                        android:gravity="center_vertical"
                        android:textAllCaps="true"/>
                </TableRow>
            </TableLayout>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:gravity="center"
                android:onClick="selectColor"
                android:text="@string/main2_color_button"
                android:textAllCaps="true"
                android:textColor="@android:color/holo_blue_dark"/>

        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_weight="0"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:gravity="center"
            android:onClick="open"
            android:text="@string/main2_new_button"
            android:textAllCaps="true"
            android:textColor="@android:color/holo_blue_dark"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:gravity="center"
            android:onClick="save"
            android:text="@string/main2_guardar_button"
            android:textAllCaps="true"
            android:textColor="@android:color/holo_blue_dark"
            />
    </LinearLayout>
    </LinearLayout>
</LinearLayout>
